--- a/loki/loki-distributed-values.yaml
+++ b/loki/loki-distributed-values.yaml
@@ -259,7 +259,7 @@ rbac:
 # ServiceMonitor configuration
 serviceMonitor:
   # -- If enabled, ServiceMonitor resources for Prometheus Operator are created
-  enabled: false
+  enabled: true
   # -- Alternative namespace for ServiceMonitor resources
   namespace: null
   # -- Namespace selector for ServiceMonitor resources
@@ -297,59 +297,59 @@ prometheusRule:
   # -- Additional PrometheusRule labels
   labels: {}
   # -- Contents of Prometheus rules file
-  groups: []
-  #  - name: loki_rules
-  #    rules:
-  #      - expr: histogram_quantile(0.99, sum(rate(loki_request_duration_seconds_bucket[1m]))
-  #          by (le, cluster, job))
-  #        record: cluster_job:loki_request_duration_seconds:99quantile
-  #      - expr: histogram_quantile(0.50, sum(rate(loki_request_duration_seconds_bucket[1m]))
-  #          by (le, cluster, job))
-  #        record: cluster_job:loki_request_duration_seconds:50quantile
-  #      - expr: sum(rate(loki_request_duration_seconds_sum[1m])) by (cluster, job) / sum(rate(loki_request_duration_seconds_count[1m]))
-  #          by (cluster, job)
-  #        record: cluster_job:loki_request_duration_seconds:avg
-  #      - expr: sum(rate(loki_request_duration_seconds_bucket[1m])) by (le, cluster, job)
-  #        record: cluster_job:loki_request_duration_seconds_bucket:sum_rate
-  #      - expr: sum(rate(loki_request_duration_seconds_sum[1m])) by (cluster, job)
-  #        record: cluster_job:loki_request_duration_seconds_sum:sum_rate
-  #      - expr: sum(rate(loki_request_duration_seconds_count[1m])) by (cluster, job)
-  #        record: cluster_job:loki_request_duration_seconds_count:sum_rate
-  #      - expr: histogram_quantile(0.99, sum(rate(loki_request_duration_seconds_bucket[1m]))
-  #          by (le, cluster, job, route))
-  #        record: cluster_job_route:loki_request_duration_seconds:99quantile
-  #      - expr: histogram_quantile(0.50, sum(rate(loki_request_duration_seconds_bucket[1m]))
-  #          by (le, cluster, job, route))
-  #        record: cluster_job_route:loki_request_duration_seconds:50quantile
-  #      - expr: sum(rate(loki_request_duration_seconds_sum[1m])) by (cluster, job, route)
-  #          / sum(rate(loki_request_duration_seconds_count[1m])) by (cluster, job, route)
-  #        record: cluster_job_route:loki_request_duration_seconds:avg
-  #      - expr: sum(rate(loki_request_duration_seconds_bucket[1m])) by (le, cluster, job,
-  #          route)
-  #        record: cluster_job_route:loki_request_duration_seconds_bucket:sum_rate
-  #      - expr: sum(rate(loki_request_duration_seconds_sum[1m])) by (cluster, job, route)
-  #        record: cluster_job_route:loki_request_duration_seconds_sum:sum_rate
-  #      - expr: sum(rate(loki_request_duration_seconds_count[1m])) by (cluster, job, route)
-  #        record: cluster_job_route:loki_request_duration_seconds_count:sum_rate
-  #      - expr: histogram_quantile(0.99, sum(rate(loki_request_duration_seconds_bucket[1m]))
-  #          by (le, cluster, namespace, job, route))
-  #        record: cluster_namespace_job_route:loki_request_duration_seconds:99quantile
-  #      - expr: histogram_quantile(0.50, sum(rate(loki_request_duration_seconds_bucket[1m]))
-  #          by (le, cluster, namespace, job, route))
-  #        record: cluster_namespace_job_route:loki_request_duration_seconds:50quantile
-  #      - expr: sum(rate(loki_request_duration_seconds_sum[1m])) by (cluster, namespace,
-  #          job, route) / sum(rate(loki_request_duration_seconds_count[1m])) by (cluster,
-  #          namespace, job, route)
-  #        record: cluster_namespace_job_route:loki_request_duration_seconds:avg
-  #      - expr: sum(rate(loki_request_duration_seconds_bucket[1m])) by (le, cluster, namespace,
-  #          job, route)
-  #        record: cluster_namespace_job_route:loki_request_duration_seconds_bucket:sum_rate
-  #      - expr: sum(rate(loki_request_duration_seconds_sum[1m])) by (cluster, namespace,
-  #          job, route)
-  #        record: cluster_namespace_job_route:loki_request_duration_seconds_sum:sum_rate
-  #      - expr: sum(rate(loki_request_duration_seconds_count[1m])) by (cluster, namespace,
-  #          job, route)
-  #        record: cluster_namespace_job_route:loki_request_duration_seconds_count:sum_rate
+  groups:
+    - name: loki_rules
+      rules:
+        - expr: histogram_quantile(0.99, sum(rate(loki_request_duration_seconds_bucket[1m]))
+            by (le, cluster, job))
+          record: cluster_job:loki_request_duration_seconds:99quantile
+        - expr: histogram_quantile(0.50, sum(rate(loki_request_duration_seconds_bucket[1m]))
+            by (le, cluster, job))
+          record: cluster_job:loki_request_duration_seconds:50quantile
+        - expr: sum(rate(loki_request_duration_seconds_sum[1m])) by (cluster, job) / sum(rate(loki_request_duration_seconds_count[1m]))
+            by (cluster, job)
+          record: cluster_job:loki_request_duration_seconds:avg
+        - expr: sum(rate(loki_request_duration_seconds_bucket[1m])) by (le, cluster, job)
+          record: cluster_job:loki_request_duration_seconds_bucket:sum_rate
+        - expr: sum(rate(loki_request_duration_seconds_sum[1m])) by (cluster, job)
+          record: cluster_job:loki_request_duration_seconds_sum:sum_rate
+        - expr: sum(rate(loki_request_duration_seconds_count[1m])) by (cluster, job)
+          record: cluster_job:loki_request_duration_seconds_count:sum_rate
+        - expr: histogram_quantile(0.99, sum(rate(loki_request_duration_seconds_bucket[1m]))
+            by (le, cluster, job, route))
+          record: cluster_job_route:loki_request_duration_seconds:99quantile
+        - expr: histogram_quantile(0.50, sum(rate(loki_request_duration_seconds_bucket[1m]))
+            by (le, cluster, job, route))
+          record: cluster_job_route:loki_request_duration_seconds:50quantile
+        - expr: sum(rate(loki_request_duration_seconds_sum[1m])) by (cluster, job, route)
+            / sum(rate(loki_request_duration_seconds_count[1m])) by (cluster, job, route)
+          record: cluster_job_route:loki_request_duration_seconds:avg
+        - expr: sum(rate(loki_request_duration_seconds_bucket[1m])) by (le, cluster, job,
+            route)
+          record: cluster_job_route:loki_request_duration_seconds_bucket:sum_rate
+        - expr: sum(rate(loki_request_duration_seconds_sum[1m])) by (cluster, job, route)
+          record: cluster_job_route:loki_request_duration_seconds_sum:sum_rate
+        - expr: sum(rate(loki_request_duration_seconds_count[1m])) by (cluster, job, route)
+          record: cluster_job_route:loki_request_duration_seconds_count:sum_rate
+        - expr: histogram_quantile(0.99, sum(rate(loki_request_duration_seconds_bucket[1m]))
+            by (le, cluster, namespace, job, route))
+          record: cluster_namespace_job_route:loki_request_duration_seconds:99quantile
+        - expr: histogram_quantile(0.50, sum(rate(loki_request_duration_seconds_bucket[1m]))
+            by (le, cluster, namespace, job, route))
+          record: cluster_namespace_job_route:loki_request_duration_seconds:50quantile
+        - expr: sum(rate(loki_request_duration_seconds_sum[1m])) by (cluster, namespace,
+            job, route) / sum(rate(loki_request_duration_seconds_count[1m])) by (cluster,
+            namespace, job, route)
+          record: cluster_namespace_job_route:loki_request_duration_seconds:avg
+        - expr: sum(rate(loki_request_duration_seconds_bucket[1m])) by (le, cluster, namespace,
+            job, route)
+          record: cluster_namespace_job_route:loki_request_duration_seconds_bucket:sum_rate
+        - expr: sum(rate(loki_request_duration_seconds_sum[1m])) by (cluster, namespace,
+            job, route)
+          record: cluster_namespace_job_route:loki_request_duration_seconds_sum:sum_rate
+        - expr: sum(rate(loki_request_duration_seconds_count[1m])) by (cluster, namespace,
+            job, route)
+          record: cluster_namespace_job_route:loki_request_duration_seconds_count:sum_rate
 
 # Configuration for the ingester
 ingester:
