--- a/promtail/promtail-values.yaml
+++ b/promtail/promtail-values.yaml
@@ -346,6 +346,9 @@ config:
   # @default -- See `values.yaml`
   clients:
     - url: http://loki-loki-distributed-gateway/loki/api/v1/push
+#      tenant_id: loki
+      external_labels:
+        cluster: cluster-2
   # -- A section of reusable snippets that can be reference in `config.file`.
   # Custom snippets may be added in order to reduce redundancy.
   # This is especially helpful when multiple `kubernetes_sd_configs` are use which usually have large parts in common.
