--- a/loki/loki-values.yaml
+++ b/loki/loki-values.yaml
@@ -11,9 +11,9 @@ global:
   # -- configures DNS service namespace
   dnsNamespace: "kube-system"
 # -- Overrides the chart's name
-nameOverride: loki
+nameOverride: null
 # -- Overrides the chart's computed fullname
-fullnameOverride: null
+fullnameOverride: loki
 # -- Image pull secrets for Docker images
 imagePullSecrets: []
 kubectlImage:
@@ -213,7 +213,7 @@ loki:
   # -- Check https://grafana.com/docs/loki/latest/configuration/#common_config for more info on how to provide a common configuration
   commonConfig:
     path_prefix: /var/loki
-    replication_factor: 3
+    replication_factor: 1
     compactor_address: '{{ include "loki.compactorAddress" . }}'
   # -- Storage config. Providing this will automatically populate all necessary storage configs in the templated config.
   storage:
@@ -221,7 +221,7 @@ loki:
       chunks: chunks
       ruler: ruler
       admin: admin
-    type: s3
+    type: filesystem
     s3:
       s3: null
       endpoint: null
@@ -281,143 +281,7 @@ loki:
   querier: {}
   # --  Optional ingester configuration
   ingester: {}
-enterprise:
-  # Enable enterprise features, license must be provided
-  enabled: false
-  # Default verion of GEL to deploy
-  version: v1.6.3
-  # -- Optional name of the GEL cluster, otherwise will use .Release.Name
-  # The cluster name must match what is in your GEL license
-  cluster_name: null
-  # -- Grafana Enterprise Logs license
-  # In order to use Grafana Enterprise Logs features, you will need to provide
-  # the contents of your Grafana Enterprise Logs license, either by providing the
-  # contents of the license.jwt, or the name Kubernetes Secret that contains your
-  # license.jwt.
-  # To set the license contents, use the flag `--set-file 'license.contents=./license.jwt'`
-  license:
-    contents: "NOTAVALIDLICENSE"
-  # -- Set to true when providing an external license
-  useExternalLicense: false
-  # -- Name of external license secret to use
-  externalLicenseName: null
-  # -- Name of the external config secret to use
-  externalConfigName: ""
-  # -- If enabled, the correct admin_client storage will be configured. If disabled while running enterprise,
-  # make sure auth is set to `type: trust`, or that `auth_enabled` is set to `false`.
-  adminApi:
-    enabled: true
-  # enterprise specific sections of the config.yaml file
-  config: |
-    {{- if .Values.enterprise.adminApi.enabled }}
-    {{- if or .Values.minio.enabled (eq .Values.loki.storage.type "s3") (eq .Values.loki.storage.type "gcs") (eq .Values.loki.storage.type "azure") }}
-    admin_client:
-      storage:
-        s3:
-          bucket_name: {{ .Values.loki.storage.bucketNames.admin }}
-    {{- end }}
-    {{- end }}
-    auth:
-      type: {{ .Values.enterprise.adminApi.enabled | ternary "enterprise" "trust" }}
-    auth_enabled: {{ .Values.loki.auth_enabled }}
-    cluster_name: {{ include "loki.clusterName" . }}
-    license:
-      path: /etc/loki/license/license.jwt
-  image:
-    # -- The Docker registry
-    registry: docker.io
-    # -- Docker image repository
-    repository: grafana/enterprise-logs
-    # -- Docker image tag
-    tag: null
-    # -- Docker image pull policy
-    pullPolicy: IfNotPresent
-  adminToken:
-    # -- Alternative name for admin token secret, needed by tokengen and provisioner jobs
-    secret: null
-    # -- Additional namespace to also create the token in. Useful if your Grafana instance
-    # is in a different namespace
-    additionalNamespaces: []
-  # -- Alternative name of the secret to store token for the canary
-  canarySecret: null
-  # -- Configuration for `tokengen` target
-  tokengen:
-    # -- Whether the job should be part of the deployment
-    enabled: true
-    # -- Comma-separated list of Loki modules to load for tokengen
-    targetModule: "tokengen"
-    # -- Additional CLI arguments for the `tokengen` target
-    extraArgs: []
-    # -- Additional Kubernetes environment
-    env: []
-    # -- Additional labels for the `tokengen` Job
-    labels: {}
-    # -- Additional annotations for the `tokengen` Job
-    annotations: {}
-    # -- Tolerations for tokengen Job
-    tolerations: []
-    # -- Additional volumes for Pods
-    extraVolumes: []
-    # -- Additional volume mounts for Pods
-    extraVolumeMounts: []
-    # -- Run containers as user `enterprise-logs(uid=10001)`
-    securityContext:
-      runAsNonRoot: true
-      runAsGroup: 10001
-      runAsUser: 10001
-      fsGroup: 10001
-    # -- Environment variables from secrets or configmaps to add to the tokengen pods
-    extraEnvFrom: []
-    # -- The name of the PriorityClass for tokengen Pods
-    priorityClassName: ""
-  # -- Configuration for `provisioner` target
-  provisioner:
-    # -- Whether the job should be part of the deployment
-    enabled: true
-    # -- Name of the secret to store provisioned tokens in
-    provisionedSecretPrefix: null
-    # -- Additional tenants to be created. Each tenant will get a read and write policy
-    # and associated token. Tenant must have a name and a namespace for the secret containting
-    # the token to be created in. For example
-    # additionalTenants:
-    #   - name: loki
-    #     secretNamespace: grafana
-    additionalTenants: []
-    # -- Additional Kubernetes environment
-    env: []
-    # -- Additional labels for the `provisioner` Job
-    labels: {}
-    # -- Additional annotations for the `provisioner` Job
-    annotations: {}
-    # -- The name of the PriorityClass for provisioner Job
-    priorityClassName: null
-    # -- Run containers as user `enterprise-logs(uid=10001)`
-    securityContext:
-      runAsNonRoot: true
-      runAsGroup: 10001
-      runAsUser: 10001
-      fsGroup: 10001
-    # -- Provisioner image to Utilize
-    image:
-      # -- The Docker registry
-      registry: docker.io
-      # -- Docker image repository
-      repository: grafana/enterprise-logs-provisioner
-      # -- Overrides the image tag whose default is the chart's appVersion
-      tag: null
-      # -- Docker image pull policy
-      pullPolicy: IfNotPresent
-    # -- Volume mounts to add to the provisioner pods
-    extraVolumeMounts: []
-# -- Options that may be necessary when performing a migration from another helm chart
-migrate:
-  # -- When migrating from a distributed chart like loki-distributed or enterprise-logs
-  fromDistributed:
-    # -- Set to true if migrating from a distributed helm chart
-    enabled: false
-    # -- If migrating from a distributed service, provide the distributed deployment's
-    # memberlist service DNS so the new deployment can join its ring.
-    memberlistService: ""
+
 serviceAccount:
   # -- Specifies whether a ServiceAccount should be created
   create: true
@@ -601,7 +465,7 @@ monitoring:
 # Configuration for the write pod(s)
 write:
   # -- Number of replicas for the write
-  replicas: 3
+  replicas: 1
   image:
     # -- The Docker registry for the write image. Overrides `loki.image.registry`
     registry: null
@@ -727,7 +591,7 @@ tableManager:
 # Configuration for the read pod(s)
 read:
   # -- Number of replicas for the read
-  replicas: 3
+  replicas: 1
   autoscaling:
     # -- Enable autoscaling for the read, this is only used if `queryIndex.enabled: true`
     enabled: false
@@ -761,7 +625,7 @@ read:
   # -- Whether or not to use the 2 target type simple scalable mode (read, write) or the
   # 3 target type (read, write, backend). Legacy refers to the 2 target type, so true will
   # run two targets, false will run 3 targets.
-  legacyReadTarget: true
+  legacyReadTarget: false
   # -- Additional CLI args for the read
   extraArgs: []
   # -- Environment variables to add to the read pods
@@ -807,7 +671,7 @@ read:
 # Configuration for the backend pod(s)
 backend:
   # -- Number of replicas for the backend
-  replicas: 3
+  replicas: 1
   image:
     # -- The Docker registry for the backend image. Overrides `loki.image.registry`
     registry: null
