doc: update loki full name

--- a/loki/loki-distributed-values.yaml
+++ b/loki/loki-distributed-values.yaml
@@ -15,7 +15,7 @@ global:
 nameOverride: null
 
 # -- Overrides the chart's computed fullname
-fullnameOverride: null
+fullnameOverride: loki
 
 # -- Image pull secrets for Docker images
 imagePullSecrets: []
