--- a/kafka/docker-compose.yaml
+++ b/kafka/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 
 services:
   zookeeper:
@@ -8,34 +8,60 @@ services:
       - '2181:2181'
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
+#    volumes:
+#      - "/data/apps/kafka/zookeeper_data:/bitnami"
+    networks:
+      kafka:
+        aliases:
+          - zookeeper
 
   kafka:
-    image: 'bitnami/kafka:latest'
+    image: 'bitnami/kafka:3.2.3'
     container_name: kafka
     ports:
       - '9092:9092'
       - '9093:9093'
     environment:
+      - KAFKA_ENABLE_KRAFT=yes
+      - KAFKA_CFG_PROCESS_ROLES=broker,controller
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+#      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://172.16.18.8:9092  # 传递回客户端的元数据，填写宿主机IP地址
       - KAFKA_BROKER_ID=1
-      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CLIENT:PLAINTEXT,EXTERNAL:PLAINTEXT
-      - KAFKA_CFG_LISTENERS=CLIENT://:9092,EXTERNAL://:9093
-      - KAFKA_CFG_ADVERTISED_LISTENERS=CLIENT://kafka:9092,EXTERNAL://localhost:9093
-      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
-      - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=CLIENT
+      - KAFKA_CFG_NODE_ID=1
+#      - KAFKA_HEAP_OPTS: '-Xmx512m -Xms256m'
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@127.0.0.1:9093
       - ALLOW_PLAINTEXT_LISTENER=yes
     depends_on:
       - zookeeper
+#    volumes:
+#      - "/data/apps/kafka/kafka_data:/bitnami"
+    networks:
+      kafka:
+        aliases:
+          - kafka
 
-  kafka-manager:
-    image: "sheepkiller/kafka-manager:latest"
+  kafka-ui:
+    image: provectuslabs/kafka-ui
+    container_name: kafka-ui
     ports:
-      - "9000:9000"
+      - "8080:8080"
+    restart: always
     environment:
-      ZK_HOSTS: "zookeeper:2181"
-      APPLICATION_SECRET: "letmein"
-      KAFKA_MANAGER_AUTH_ENABLED: "false"
-      KAFKA_MANAGER_AUTH_USERNAME: "admin"
-      KAFKA_MANAGER_AUTH_PASSWORD: "admin"
+      - KAFKA_CLUSTERS_0_NAME=local
+      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka:9092
+      - KAFKA_CLUSTERS_0_ZOOKEEPER=zookeeper:2181
+#      - KAFKA_CLUSTERS_0_READONLY=true
     depends_on:
-      - zookeeper
       - kafka
+      - zookeeper
+    networks:
+      kafka:
+        aliases:
+          - kafka-ui
+
+
+networks:
+  kafka:
+    driver: bridge
