--- a/loki/loki-distributed-values.yaml
+++ b/loki/loki-distributed-values.yaml
@@ -356,11 +356,11 @@ ingester:
   replicas: 1
   autoscaling:
     # -- Enable autoscaling for the ingester
-    enabled: false
+    enabled: true
     # -- Minimum autoscaling replicas for the ingester
     minReplicas: 1
     # -- Maximum autoscaling replicas for the ingester
-    maxReplicas: 3
+    maxReplicas: 10
     # -- Target CPU utilisation percentage for the ingester
     targetCPUUtilizationPercentage: 60
     # -- Target memory utilisation percentage for the ingester
@@ -463,11 +463,11 @@ distributor:
   replicas: 1
   autoscaling:
     # -- Enable autoscaling for the distributor
-    enabled: false
+    enabled: true
     # -- Minimum autoscaling replicas for the distributor
     minReplicas: 1
     # -- Maximum autoscaling replicas for the distributor
-    maxReplicas: 3
+    maxReplicas: 10
     # -- Target CPU utilisation percentage for the distributor
     targetCPUUtilizationPercentage: 60
     # -- Target memory utilisation percentage for the distributor
@@ -538,11 +538,11 @@ querier:
   replicas: 1
   autoscaling:
     # -- Enable autoscaling for the querier, this is only used if `indexGateway.enabled: true`
-    enabled: false
+    enabled: true
     # -- Minimum autoscaling replicas for the querier
     minReplicas: 1
     # -- Maximum autoscaling replicas for the querier
-    maxReplicas: 3
+    maxReplicas: 10
     # -- Target CPU utilisation percentage for the querier
     targetCPUUtilizationPercentage: 60
     # -- Target memory utilisation percentage for the querier
@@ -626,11 +626,11 @@ queryFrontend:
   replicas: 1
   autoscaling:
     # -- Enable autoscaling for the query-frontend
-    enabled: false
+    enabled: true
     # -- Minimum autoscaling replicas for the query-frontend
     minReplicas: 1
     # -- Maximum autoscaling replicas for the query-frontend
-    maxReplicas: 3
+    maxReplicas: 10
     # -- Target CPU utilisation percentage for the query-frontend
     targetCPUUtilizationPercentage: 60
     # -- Target memory utilisation percentage for the query-frontend
@@ -858,11 +858,11 @@ gateway:
   verboseLogging: true
   autoscaling:
     # -- Enable autoscaling for the gateway
-    enabled: false
+    enabled: true
     # -- Minimum autoscaling replicas for the gateway
     minReplicas: 1
     # -- Maximum autoscaling replicas for the gateway
-    maxReplicas: 3
+    maxReplicas: 10
     # -- Target CPU utilisation percentage for the gateway
     targetCPUUtilizationPercentage: 60
     # -- Target memory utilisation percentage for the gateway
