--- a/prometheus/prometheus-values.yaml
+++ b/prometheus/prometheus-values.yaml
@@ -20,7 +20,7 @@ kubeVersionOverride: ""
 
 ## Provide a name to substitute for the full names of resources
 ##
-fullnameOverride: "prometheus"
+fullnameOverride: "prometheus-stack"
 
 ## Labels to apply to all resources
 ##
@@ -3802,4 +3802,3 @@ thanosRuler:
 ## Setting to true produces cleaner resource names, but requires a data migration because the name of the persistent volume changes. Therefore this should only be set once on initial installation.
 ##
 cleanPrometheusOperatorObjectNames: false
-
