--- a/prometheus/prometheus-values.yaml
+++ b/prometheus/prometheus-values.yaml
@@ -2,20 +2,17 @@ fullnameOverride: "prometheus-stack"
 
 ## https://github.com/prometheus-operator/kube-prometheus/issues/718
 ## https://github.com/google/cadvisor/issues/3336
-#kubeScheduler:
-#  enabled: false
-#
-#kubeControllerManager:
-#    enabled: false
-#
-#kubeEtcd:
-#    enabled: false
-#
-#kubeProxy:
-#    enabled: false
-#
-#kubeApiserver:
-#    enabled: false
+kubeScheduler:
+  enabled: false
+
+kubeControllerManager:
+    enabled: false
+
+kubeEtcd:
+    enabled: false
+
+kubeProxy:
+    enabled: false
 
 
 ## Using default values from https://github.com/grafana/helm-charts/blob/main/charts/grafana/values.yaml
@@ -64,6 +61,9 @@ kube-state-metrics:
   selfMonitor:
     enabled: true
 
+kubelet:
+  serviceMonitor:
+    cAdvisor: false
 
 ## Deploy node exporter as a daemonset to all nodes
 ##
