--- a/clickhosue-operator/simple.yaml
+++ b/clickhosue-operator/simple.yaml
@@ -8,9 +8,13 @@ spec:
     clusters:
       - name: "simple"
         layout:
-          shardsCount: 1
-          replicasCount: 1
-
+          shardsCount: 2
+          replicasCount: 2
+    users:
+      admin/password: "admin"
+      admin/networks/ip:
+        - "127.0.0.1"
+        - "::/0"
   defaults:
     templates:
       podTemplate: pod-template-resource-limit
@@ -28,11 +32,11 @@ spec:
               # Container has explicitly specified resource limits
               resources:
                 requests:
-                  memory: "512Mi"
-                  cpu: "500m"
+                  memory: "0.5Gi"
+                  cpu: "300m"
                 limits:
-                  memory: "512Mi"
-                  cpu: "500m"
+                  memory: "0.5Gi"
+                  cpu: "300m"
 
     volumeClaimTemplates:
       - name: clickhouse-data-storage
@@ -41,4 +45,4 @@ spec:
             - ReadWriteOnce
           resources:
             requests:
-              storage: 100Gi
+              storage: 10Gi
