add ethtool-exporter chart

--- a/ethtool-exporter/servicemonitor.yaml
+++ b/ethtool-exporter/servicemonitor.yaml
@@ -1,16 +1,13 @@
 apiVersion: monitoring.coreos.com/v1
-kind: PodMonitor
+kind: ServiceMonitor
 metadata:
   name: ethtool-exporter
   labels:
     app: ethtool-exporter
     release: prometheus-stack
 spec:
-  jobLabel: pod-template-hash
-  podMetricsEndpoints:
-    - honorLabels: false
-      honorTimestamps: true
-      path: /metrics
+  endpoints:
+    - path: /metrics
       port: http
   selector:
     matchLabels:
