--- a/grafana/values.yaml
+++ b/grafana/values.yaml
@@ -8,6 +8,10 @@ defaultDashboardsTimezone: Asia/Taipei
 image:
   tag: main
 
+replicas: 3
+
+headlessService: true
+
 datasources:
   datasources.yaml:
     apiVersion: 1
@@ -53,6 +57,15 @@ grafana.ini:
     enabled: true
     backend: "loki"
     loki_remote_url: "http://loki-gateway.loki"
+  database:
+    url: mysql://admin:admin@mysql.mysql:3306/grafana
+  unified_alerting:
+    enabled: true
+    ha_listen_address: "${POD_IP}:9094"
+    ha_advertise_address: "${POD_IP}:9094"
+    ha_peers: grafana-headless.grafana:9094
+  alerting:
+    enabled: false
 
 persistence:
   accessModes:
@@ -60,3 +73,6 @@ persistence:
   enabled: true
   size: 10Gi
   type: pvc
+
+plugins:
+  - https://grafana.com/api/plugins/grafana-oncall-app/versions/v1.9.0/download;grafana-oncall-app
