--- a/grafana-loki/loki/values-3.3.0.yaml
+++ b/grafana-loki/loki/values-3.3.0.yaml
@@ -16,6 +16,7 @@ loki:
     wal:
       flush_on_shutdown: true
   limits_config:
+    max_query_series: 100000
     allow_structured_metadata: true
     bloom_compactor_enable_compaction: true
     bloom_gateway_enable_filtering: true
