--- a/grafana-alloy/values.yaml
+++ b/grafana-alloy/values.yaml
@@ -7,65 +7,87 @@ alloy:
   extraEnv:
     - name: LOKI_HOST
       value: "loki-distributor.loki:3100"
+    - name: TEMPO_HOST
+      value: "tempo-distributor.tempo:4318"
+    - name: CLUSTER_NAME
+      value: "Orbstack-cluster"
   configMap:
     create: true
     content: |
       logging {
-      	level  = "debug"
-      	format = "logfmt"
+        level  = "debug"
+        format = "logfmt"
       }
-      otelcol.exporter.otlp "local" {
-        client {
-          endpoint = "tempo-distributor.tracing:4317"
-          tls {
-            insecure             = true
-            insecure_skip_verify = true
-          }
-        }
-      }
+      
       loki.write "loki" {
         endpoint {
           url = format("http://%s/loki/api/v1/push", env("LOKI_HOST"))
         }
       }
+      
       loki.source.api "logs" {
         http {
           listen_address = "0.0.0.0"
           listen_port = 9999
-          conn_limit = 300
         }
         use_incoming_timestamp = true
         forward_to = [
           loki.write.loki.receiver,
         ]
-        labels = {
-          cluster= env("CLUSTER_NAME"),
-        }
-      }
-      otelcol.processor.k8sattributes "default" {
-        output {
-          traces  = [otelcol.exporter.otlp.local.input]
-        } 
-      }
-      otelcol.exporter.otlphttp "local" {
-        client {
-          endpoint = "http://tempo-gateway.tracing"
-          tls {
-            insecure             = true
-            insecure_skip_verify = true
-          }
-        }
       }
       
       otelcol.receiver.otlp "default" {
-        grpc {}
         http {}
+        grpc {}
+      
         output {
-          metrics = []
-          logs = []
+          traces  = [otelcol.processor.memory_limiter.default.input]
+        }
+      }
+      otelcol.processor.memory_limiter "default" {
+        check_interval = "5s"
+        limit_percentage = 80
+        spike_limit_percentage = 25
+        output {
+          traces  = [otelcol.processor.batch.default.input]
+        }
+      }
+      otelcol.processor.batch "default" {
+        timeout = "10s"
+        send_batch_size = 10000
+        output {
+          traces  = [otelcol.processor.attributes.default.input]
+        }
+      }
+      otelcol.processor.attributes "default" {
+        action {
+          key = "cluster"
+          value = env("CLUSTER_NAME")
+          action = "insert"
+        }
+        output {
           traces = [otelcol.processor.k8sattributes.default.input]
         }
       }
+      otelcol.processor.k8sattributes "default" {
+        extract {
+          metadata = [
+            "k8s.namespace.name",
+            "k8s.pod.name",
+            "k8s.container.name",
+          ]
+        }
+        output {
+          traces = [otelcol.exporter.otlphttp.tempo.input]
+        }
+      }
+      
+      otelcol.exporter.otlphttp "tempo" {
+        client {
+          endpoint = format("http://%s", env("TEMPO_HOST"))
+        }
+      }
+
 
   extraPorts:
     - name: "otlp-grpc"
@@ -92,7 +114,7 @@ alloy:
 
 controller:
   type: 'statefulset'
-  replicas: 5
+  replicas: 2
 
 service:
   enabled: true
